<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleProducto.DetalleProductoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <!--Nombre del producto-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nombrePD"
                android:textSize="25sp"
                android:textColor="@color/azul_marino_oscuro"
                android:text="@string/nombrePD"/>

            <!--Para deslizar un producto-->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imagenVP"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/nombrePD"/>
            
            <RelativeLayout
                android:layout_below="@+id/imagenVP"
                android:id="@+id/RL_Precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <!--Precio del producto-->
                <TextView
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/precioPD"
                    android:text="@string/precioPD"/>

                <!--Precio con descuento del producto-->
                <TextView
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/precioDescPD"
                    android:text="@string/precioDescPD"
                    android:layout_toEndOf="@+id/precioPD"
                    android:layout_below="@+id/precioPD"/>

                <!--Nota de descuento del producto-->
                <TextView
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/precioDescPD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/notaDescuentoPD"
                    android:text="@string/notaDescuentoPD"/>

            </RelativeLayout>

            <!--Información general-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descripcionPDTXT"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/descripcionPDTXT"
                android:layout_below="@+id/RL_Precio"/>

            <!--Descricpión del producto-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:id="@+id/descripcionPD"
                android:text="@string/descripcionPD"
                android:layout_below="@+id/descripcionPDTXT"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_agregar_carrito_p"
                android:text="@string/item_agregar_carrito_p"
                app:cornerRadius="8dp"
                android:layout_below="@+id/descripcionPD"
                android:textAllCaps="true"
                app:icon="@drawable/carrito_compras"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>




        </RelativeLayout>
    </ScrollView>
</RelativeLayout>