<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".vendedor.productos.AgregarProductoActivity">
    
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="wrap_content"
        android:layout_height="55dp">

        <TextView
            android:text="@string/txtAgregarProductos"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#ccc"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/RLImagen"
        android:layout_below="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgAgregarProducto"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/agregar_producto"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RLImagen"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Listar imagenes de un producto-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RV_ImagenesProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                tools:listitem="@layout/item_imagenes_seleccionadas" />

            <!--Nombres del producto-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_NombresP"
                android:layout_below="@+id/RV_ImagenesProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etNombresP"
                    android:hint="@string/etNombresP"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Descripción-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_DescripcionP"
                android:layout_below="@+id/TIL_NombresP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDescripcion"
                    android:hint="@string/etDescripcionP"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Categorías-->
            <TextView
                android:id="@+id/Categoria"
                android:hint="@string/Categoria"
                android:padding="15dp"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                app:drawableEndCompat = "@drawable/icono_menu_categoria"
                android:background="@drawable/custom_edittext"
                android:layout_below="@+id/TIL_DescripcionP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Precio-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Precio"
                android:layout_below="@+id/Categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPrecioP"
                    android:hint="@string/etPrecioP"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Switch-->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/descuentoSwitch"
                android:text="@string/txtDescuento"
                android:layout_below="@+id/TIL_Precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

            <!--Precio con descuento aplicado-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_PrecioDes"
                android:layout_below="@+id/descuentoSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPrecioConDescuentoP"
                    android:hint="@string/etPrecioConDescuentoP"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Nota del descuento-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_NotaDesc"
                android:layout_below="@+id/TIL_PrecioDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etNotaDescuentoP"
                    android:hint="@string/etNotaDescuentoP"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
    <!--Botón agregar producto-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAgregarProducto"
        android:text="@string/btnAgregarProducto"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:layout_margin="20dp"
        app:cornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>