<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.LoginClienteActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/txtLoginC"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/login_cliente"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:drawableStart="@drawable/icono_email"
                android:drawablePadding="10dp"
                android:hint="@string/etEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPassword"
                android:drawableStart="@drawable/icono_contrasenia"
                android:drawablePadding="10dp"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Boton de login-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginC"
            android:text="@string/btnLoginC"
            android:textAllCaps="true"
            app:cornerRadius="8dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <!--Boton de login Google-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="100dp"
                android:layout_height="60dp">
                
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnLoginGoogle"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_google_login"
                    android:layout_width="25dp"
                    android:layout_height="30dp"/>
            </com.google.android.material.card.MaterialCardView>
            <!--Boton de login telefono-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnLoginTelefono"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_tel_login"
                    android:layout_gravity="center"/>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Pregunta-->
        <TextView
            android:text="@string/txtNoCuenta"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Registrar Cliente-->
        <TextView
            android:id="@+id/tvRegistrarC"
            android:text="@string/tvRegistrarC"
            android:textStyle="bold"
            android:textColor="@color/celeste_oscuro"
            android:textSize="17sp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>